--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       placeholder="write your text here"
     />
     <button id="submitButton">Submit</button>
+    <h2>Result:</h2>
+    <div id="result"></div>
   </body>
   <script src="/task.js"></script>
 </html>
